# fontana

./: .env  .env.example  .env.new  .gitmodules  README.md  pyproject.toml  pytest.ini
data/: vault_watcher.db
docs/: 01-core-foundations.md  02-ledger-engine.md  03-block-generator.md  04-da-integration-poster.md  05-vault-watcher-bridge-interface.md  06-django-sdk-plugin-initial.md  07-cli-user-commands.md  08-advanced-sdk.md  09-withdrawal-processor-recovery.md  10-rust-bridge-integration.md  11-housekeeping-optionals.md  missing-features.md  prd.md  pylestia-integration.md  running_fontana_rollup.md  schema.md
examples/: custom_genesis.json  genesis.json
scripts/: create_genesis.py  create_genesis_wallet.py  debug_celestia_connection.py  debug_transaction_flow.py  initialize_ledger.py  run_node.py  test_fast_transactions.py  test_transaction_batching.py  test_transactions.py  vault_watcher.py
src/fontana/: __init__.py
src/fontana/bridge/: __init__.py  handler.py
src/fontana/bridge/celestia/: __init__.py  account_client.py
src/fontana/cli/: main.py  poster.py  wallet.py
src/fontana/core/: config.py  notifications.py
src/fontana/core/block_generator/: __init__.py  generator.py  processor.py
src/fontana/core/da/: __init__.py  client.py  poster.py
src/fontana/core/db/: db.py  db_extensions.py
src/fontana/core/ledger/: __init__.py  ledger.py
src/fontana/core/models/: block.py  genesis.py  receipt.py  transaction.py  utxo.py  vault.py
src/fontana/core/notifications/: __init__.py  manager.py
src/fontana/core/state_merkle/: __init__.py  smt.py
src/fontana/wallet/: signer.py  wallet.py
tests/: conftest.py  test_blob_poster.py  test_block.py  test_block_generator.py  test_bridge_handler.py  test_bridge_integration.py  test_celestia_account_client.py  test_celestia_client.py  test_config.py  test_genesis.py  test_ledger.py  test_receipt.py  test_signer.py  test_smt.py  test_transaction.py  test_transaction_processor.py  test_utxo.py  test_vault.py  test_vault_watcher.py  test_wallet.py
